# dstoptim

./: CMakeLists.txt  README.md  dstoptim-scm-1.rockspec  dstsgd.lua  init.lua
